--- a/index.css
+++ b/index.css
@@ -1,15 +1,48 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
 
 body {
-    padding:0px;
-    margin:0px;
-    background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("https://images.unsplash.com/photo-1491956175078-460aea0914ca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1550&q=80") center center;
-    background-size:cover;
-    width:100vw;
-    height:100vh;
-    overflow:hidden;
-    font-family: 'Josefin Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  font-family: 'Josefin Sans', sans-serif;
+  position: relative;
 }
+
+.slideshow {
+  position: fixed;
+  top: 0; left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
+
+.slideshow img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  animation: fade 56s infinite; /* 7 images x 8s each */
+}
+
+.slideshow img:nth-child(1) { animation-delay: 0s; }
+.slideshow img:nth-child(2) { animation-delay: 8s; }
+.slideshow img:nth-child(3) { animation-delay: 16s; }
+.slideshow img:nth-child(4) { animation-delay: 24s; }
+.slideshow img:nth-child(5) { animation-delay: 32s; }
+.slideshow img:nth-child(6) { animation-delay: 40s; }
+.slideshow img:nth-child(7) { animation-delay: 48s; }
+
+@keyframes fade {
+  0% { opacity: 0; }
+  4% { opacity: 1; }
+  24% { opacity: 1; }
+  28% { opacity: 0; }
+  100% { opacity: 0; }
+}
+
 #loading {
     width: 100vw;
     height: 100vh;
