--- a/index.css
+++ b/index.css
@@ -17,6 +17,15 @@ body {
   width: 100%;
   z-index: -1;
 }
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 50% black */
+  z-index: -1; /* keep it under all content, just above slideshow */
+}
 
 .slideshow img {
   position: absolute;
