--- a/index.css
+++ b/index.css
@@ -125,7 +125,7 @@ body {
     font-size:70px;
     text-decoration:underline;
 }
-#projects {
+#whatwedo {
     width: 10vw;
     height: 10vw;
     text-align: center;
@@ -143,7 +143,7 @@ body {
     border-radius: 0px 0px 100px 100px;
 }
 
-#about {
+#whoweare {
     width:10vw;
     height:10vw;
     text-align:center;
@@ -161,7 +161,7 @@ body {
     transition:0.4s ease-in-out;
     border-radius:0px 0px 100px 100px;
 }
-#work {
+#missionvision {
     width:10vw;
     height:10vw;
     text-align:center;
@@ -179,7 +179,7 @@ body {
     transition:0.4s ease-in-out;
     border-radius:0px 0px 100px 100px;
 }
-#contact {
+#getinvolved {
     width:10vw;
     height:10vw;
     text-align:center;
@@ -196,22 +196,14 @@ body {
     transition:0.4s ease-in-out;
     border-radius:100px 100px 0px 0px;
 }
-#projects:hover {
+#whatwedo:hover,
+#whoweare:hover,
+#missionvision:hover,
+#getinvolved:hover {
     background:rgba(255,50,50,0.9);
     cursor:pointer;
 }
-#about:hover {
-    background:rgba(255,50,50,0.9);
-    cursor:pointer;
-}
-#work:hover {
-    background:rgba(255,50,50,0.9);
-    cursor:pointer;
-}
-#contact:hover {
-    background:rgba(255,50,50,0.9);
-    cursor:pointer;
-}
+
 #middle table {
     width:30%;
     margin:6vh auto;
@@ -275,6 +267,14 @@ body {
 .container p {
     font-size:21px;
 }
+.container ul {
+    list-style-type: disc;
+    padding-left: 40px;
+}
+.container li {
+    font-size: 21px;
+    margin-bottom: 10px;
+}
 .btn_one {
     font-size:18px;
     font-family: 'Josefin Sans', sans-serif;
@@ -307,45 +307,6 @@ body {
 .btn_two:hover {
     cursor:pointer;
     padding:8px 60px;
-}
-.container form input {
-    width:46%;
-    margin:20px 1%;
-    background:transparent;
-    border:0px;
-    border-bottom:3px solid rgba(255,255,255,0.5);
-    padding:8px 10px;
-    font-family: 'Poppins', sans-serif;
-    font-size:18px;
-    transition:0.4s ease-in-out;
-    color:#fff;
-    font-weight:bold;
-}
-.container form textarea {
-    width:96%;
-    margin:20px 1%;
-    padding:8px 10px;
-    border:0px;
-    border-bottom:3px solid rgba(255,255,255,0.5);
-    padding:8px 10px;
-    font-family: 'Poppins', sans-serif;
-    font-size:18px;
-    background:transparent;
-    resize:none;
-    transition:0.4s ease-in-out;
-    color:#fff;
-    font-weight:bold;
-}
-.container form input:focus {
-    outline:none;
-    border-bottom:3px solid rgba(255, 255, 255,1);
-}
-.container form textarea:focus {
-    outline:none;
-    border-bottom:3px solid rgba(255, 255, 255,1);
-}
-::placeholder {
-    color:#fff;
 }
 #footer {
     color:#fff;
@@ -384,17 +345,17 @@ body {
 	background: rgb(255, 50, 50);
 }
 
+/* New rule for heading colors inside pullouts */
+.container h2,
+.container h3 {
+    color: black;
+}
+
 @media (max-width: 800px){ 
-    #projects {
-        display:none;
-    }
-    #about {
-        display:none;
-    }
-    #contact {
-        display:none;
-    }
-    #work {
+    #whatwedo,
+    #whoweare,
+    #getinvolved,
+    #missionvision {
         display:none;
     }
     #footer {
